<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e4e4e4"
        app:layout_anchorGravity="center_vertical"
        tools:context=".activities.DashboardActivity">

<!--        <data>-->
<!--            <variable-->
<!--                name="user"-->
<!--                type="vnot.mynursingtb.v1.data.UserProfile" />-->
<!--            <variable-->
<!--                name="imageUrl"-->
<!--                type="String" />-->
<!--        </data>-->

        <!--    tools:viewBindingIgnore="true"-->
        <!--        <data>-->
        <!--            <import type="android.view.View" />-->
        <!--            <variable name="handlers" type="vnot.mynursingtb.v1.MyHandlers" />-->
        <!--            <variable name="task" type="vnot.mynursingtb.v1.Task" />-->
        <!--            <variable name="presenter" type="vnot.mynursingtb.v1.Presenter" />-->
        <!--        </data>-->

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:background="@drawable/custom_rectangle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:letterSpacing="0.025"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnLogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/app_deskripsi"
            android:onClick="onClickLogOut"
            android:padding="8dp"
            android:src="@drawable/ic_logout"
            app:layout_constraintCircleRadius="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!--            android:onClick="@={(theView) -> handlers.onClickLogOut()}"-->

        <TextView
            android:id="@+id/tvCopyRight"
            style="@style/MyUNUYTextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="onClickCopyRight"
            android:text="@string/txt_copyright"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <!--        android:onClick="@{handlers::onClickCopyRight}"-->

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:elevation="12dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="@id/view"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/view"
            app:layout_constraintTop_toBottomOf="@id/view">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

<!--                android:text="@{user.userName, default=UserName}"-->
                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_dashboard_usr"
                    android:textAllCaps="true"
                    android:textColor="@color/warna_unuy"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvEmailUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/txt_dashboard_email"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/tvUserName"
                    app:layout_constraintTop_toBottomOf="@+id/tvUserName" />

                <TextView
                    android:id="@+id/tvPhoneUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/txt_dashboard_phone"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/tvEmailUser"
                    app:layout_constraintTop_toBottomOf="@+id/tvEmailUser" />

                <!--                android:onClick="@{handlers::onClickReminder}"-->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnReminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="onClickReminder"
                    android:text="@string/txt_dashboard_reminder"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvPhoneUser" />

                <!--            <com.google.android.material.button.MaterialButton-->
                <!--                android:id="@+id/editProfileB"-->
                <!--                style="@style/Widget.MaterialComponents.Button.OutlinedButton"-->
                <!--                android:layout_width="wrap_content"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:layout_marginStart="8dp"-->
                <!--                android:text="EDIT PROFILE"-->
                <!--                android:textColor="@color/warna_unuy"-->
                <!--                app:layout_constraintBottom_toBottomOf="@+id/todoB"-->
                <!--                app:layout_constraintStart_toEndOf="@+id/todoB" />-->

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/ivProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/app_deskripsi"
                        android:onClick="onClickProfile"
                        android:padding="8dp"
                        android:src="@drawable/profile" />

<!--                    <ImageView-->
<!--                        android:id="@+id/ivSymbolVerified"-->
<!--                        android:layout_width="35dp"-->
<!--                        android:layout_height="35dp"-->
<!--                        app:srcCompat="@drawable/ic_not_verified_24"-->
<!--                        android:contentDescription="@string/app_deskripsi" />-->
                </FrameLayout>

                <!--                userProfile="@{imageUrl}"-->

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvCopyRight"
            android:layout_below="@+id/cardView"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="0dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <!--            android:onClick="@{handlers::onClickPenkes}"-->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardPenkes"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_margin="8dp"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:elevation="12dp"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="onClickPenkes"
                app:cardCornerRadius="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/image_view1"
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:src="@drawable/ic_logo_mynursing_tb_v1"
                        app:layout_constraintBottom_toTopOf="@+id/tvPenkes"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvPenkes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/txt_dashboard_penkes"
                        android:textAllCaps="true"
                        android:textColor="@color/warna_unuy"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/image_view1" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <!--            android:onClick="@{handlers::onClickFaskes}"-->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardFaskes"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_margin="8dp"
                android:layout_marginStart="16dp"
                android:clickable="true"
                android:elevation="12dp"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="onClickFaskes"
                app:cardCornerRadius="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/image_view20"
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:contentDescription="@string/app_deskripsi"
                        android:src="@drawable/ic_logo_faskes_kartun_v1"
                        app:layout_constraintBottom_toTopOf="@+id/tvFaskes"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvFaskes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/txt_dashboard_faskes"
                        android:textAllCaps="true"
                        android:textColor="@color/warna_unuy"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/image_view20" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </RelativeLayout>
</layout>
